Fix fullwidth issue on mobile screens

--- a/assets/css/src/base/layout.css
+++ b/assets/css/src/base/layout.css
@@ -32,8 +32,6 @@ body {
 }
 
 .content-area {
-	padding-left: 1rem;
-	padding-right: 1rem;
 	margin-left: auto;
 	margin-right: auto;
 	margin-top: 4rem;
@@ -130,12 +128,12 @@ body {
 .entry-content .alignfull {
 	margin-bottom: 4rem;
 	margin-top: 4rem;
+	width: 100%;
 
 	@media (--medium-viewport) {
 		margin-left: auto;
 		margin-right: auto;
 		max-width: 100vw;
-		width: 100%;
 	}
 
 	&.wp-block-cover {
@@ -161,6 +159,17 @@ body {
 	& > .wp-caption-text {
 		padding-left: 2rem;
 		padding-right: 2rem;
+	}
+}
+
+.section-inner {
+	margin-left: auto;
+	margin-right: auto;
+	max-width: 100%;
+	width: calc(100% - 4rem);
+
+	@media (--small-viewport-max) {
+		width: calc(100% - 2rem);
 	}
 }
 
