--- a/assets/css/src/components/archive-image-list.css
+++ b/assets/css/src/components/archive-image-list.css
@@ -14,10 +14,13 @@
  * limitations under the License.
  */
 
+.archive-image-list-wrap {
+	margin-top: 3rem;
+}
+
 .archive-image-list {
 	column-count: 1;
 	column-gap: 1rem;
-	margin-top: 1.5rem;
 
 	@media (--medium-viewport) {
 		column-count: 2;
